src/components/Tabs/tabs.scss
.sb-tab-add {
  position: relative;
  display: flex;
  align-items: center;
  padding: 9px 10px;
  text-align: center;
}

.sb-tab-edit-button {
  position: absolute;
  right: -20px;
  top: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0;
  color: currentColor;
  background: transparent;
  border: 0;
  cursor: pointer;
  opacity: 0;
  transform: none;
  transform: translateY(-50%);
  fill: currentColor;
}

.sb-tab {
  position: relative;
  z-index: 0;
  display: flex;
  align-items: center;
  margin-right: 25px;
  padding: 14px 2px;
  color: $sb-dark-blue-50;
  font-family: $primary-font-family;
  font-size: $font-14;
  font-weight: $font-medium;
  text-align: center;
  background-color: transparent;
  border: 0;
  cursor: pointer;

  &:hover,
  &:focus {
    color: $primary-text-color;
  }
}

.sb-tab--is-active {
  z-index: 3;
  color: $primary-text-color;
  font-weight: $font-medium;

  &::after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 3px;
    background-color: $sb-green;
  }
}

.sb-tab:focus {
  color: $sb-green;
}

.sb-tab--editable {
  padding: 9px 2px;

  &:hover,
  &:focus {
    .sb-tab-edit-button {
      opacity: 1;
    }
  }
}

.sb-tab--has-icon {
  padding: 9px 4px 9px 2px;
}

.sb-tab--disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.sb-tabs {
  position: relative;
  display: flex;
  overflow: auto;
  width: 100%;
  margin: 0;
  padding: 0;
  list-style-type: none;

  @include scrollbar($white, $sb-dark-blue-25, 4px);

  &::after {
    content: '';
    position: absolute;
    bottom: 1px;
    left: 0;
    width: 100%;
    height: 1px;
    background-color: $light;
  }
}

.sb-tabs__add-button {
  display: flex;
  align-items: center;
  justify-content: center;
  vertical-align: bottom;
  margin-left: -12px;
  background-color: transparent;
  border: 0;
  cursor: pointer;

  @include base--icon-hover;
}

.sb-tabs--container {
  .sb-tab--is-active {
    padding: 8px;
    border: 1px solid $light-gray;
    border-radius: 5px 5px 0 0;
    border-bottom: 0;

    &::after {
      background-color: $white;
    }
  }
}

.sb-tabs--vertical {
  flex-direction: column;

  &::after {
    display: none;
  }

  .sb-tab--is-active {
    padding-left: 8px;

    &::after {
      left: 0;
      top: 0;
      width: 3px;
      height: 100%;
    }
  }
}

